src/app/3-build-your-app/styles/_3-create-an-app-from-base-and-custom-lightning-components.scss
@import '../../base';

.create-an-app-from-base-and-custom-lightning-components {

  .step-0, .step-1 {
    background: url('../app/3-build-your-app/assets/3-create-an-app-from-base-and-custom-lightning-components-screen-bkg-1.png') center center no-repeat;
  }

  .step-2, .step-3 {
    background: url('../app/3-build-your-app/assets/3-create-an-app-from-base-and-custom-lightning-components-screen-bkg-2.png') left center no-repeat;
  }

  .step-4 {
    background: url('../app/3-build-your-app/assets/3-create-an-app-from-base-and-custom-lightning-components-screen-bkg-3.png') center center no-repeat;
  }

  .step-5 {
    background: url('../app/3-build-your-app/assets/3-create-an-app-from-base-and-custom-lightning-components-screen-bkg-4.png') center center no-repeat;
  }

  .step-1 {
    .report-chart-drag {
      position: absolute;
      bottom: 164px;
      left: 17px;
      border-radius: 4px;
      &.active {
        animation: borderActive 1.5s infinite;
        cursor: move;
      }
    }
    .drop-box {
      position: absolute;
      top: 107px;
      left: 262px;
      width: 237px;
      height: 115px;
      border-radius: 5px;
      &.active {
        animation: borderActive 1.5s infinite;
        cursor: pointer;
      }
    }
    .report-chart {
      position: absolute;
      top: 107px;
      left: 262px;
    }
  }

  .step-4 {
    .chatter-feed-drag {
      position: absolute;
      bottom: 274px;
      left: 12px;
      border-radius: 4px;
      &.active {
        animation: borderActive 1.5s infinite;
        cursor: move;
      }
    }
    .drop-box {
      position: absolute;
      top: 229px;
      left: 262px;
      width: 237px;
      height: 115px;
      border-radius: 5px;
      &.active {
        animation: borderActive 1.5s infinite;
        cursor: pointer;
      }
    }
    .chatter-feed {
      position: absolute;
      top: 229px;
      left: 262px;
    }
  }

  .step-5 {
    .customer-ideas-drag {
      position: absolute;
      bottom: 69px;
      left: 18px;
      border-radius: 4px;
      &.active {
        animation: borderActive 1.5s infinite;
        cursor: move;
      }
    }
    .drop-box {
      position: absolute;
      top: 351px;
      left: 262px;
      width: 237px;
      height: 115px;
      border-radius: 5px;
      &.active {
        animation: borderActive 1.5s infinite;
        cursor: pointer;
      }
    }
    .customer-ideas {
      position: absolute;
      top: 351px;
      left: 262px;
    }
  }

}

